--- a/CelestialShadows/CelestialShadows.csproj
+++ b/CelestialShadows/CelestialShadows.csproj
@@ -82,6 +82,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_BuildManager\Properties\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShadowManager.cs" />
     <Compile Include="ShadowObject.cs" />
