--- a/PQSManager/PQSManager.csproj
+++ b/PQSManager/PQSManager.csproj
@@ -85,6 +85,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_BuildManager\Properties\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="PQSManager.cs" />
     <Compile Include="PQSWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
