--- a/PartFX/PartFX.csproj
+++ b/PartFX/PartFX.csproj
@@ -81,6 +81,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_BuildManager\Properties\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="IVARenderCam.cs" />
     <Compile Include="IVAWindowManager.cs" />
     <Compile Include="IVAWindow.cs" />
