--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -85,6 +85,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_BuildManager\Properties\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="ClassExtensions.cs" />
     <Compile Include="ConfigHelper.cs" />
     <Compile Include="MaterialPQS.cs" />
