New Loader mechanism.
Before, everything was a KSP monobehaviour. Now, all the managers are of
a new class that does not inherit from monobehaviour. This supports load
order and late order (for other mods). Should look into early load too.

--- a/EveManager/EveManager.csproj
+++ b/EveManager/EveManager.csproj
@@ -88,8 +88,9 @@
     <Compile Include="..\_BuildManager\Properties\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
-    <Compile Include="EVEManager.cs" />
+    <Compile Include="GlobalEVEManager.cs" />
     <Compile Include="GenericEVEManager.cs" />
+    <Compile Include="IEVEManager.cs" />
     <Compile Include="IEVEObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
