--- a/_BuildManager/_BuildManager.csproj
+++ b/_BuildManager/_BuildManager.csproj
@@ -143,8 +143,7 @@ xcopy "$(SolutionDir)ContentEVE\GameData" "C:\Users\rbray\Documents\ksp\ksp-$(Pl
 
 if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.pdb"
 if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.mdb"
-if $(ConfigurationName) == Release del "$(SolutionDir)$(PlatformName)-Configs-Release.zip"
-if $(ConfigurationName) == Release del "$(SolutionDir)$(PlatformName)-EVE-Release.zip"
+if $(ConfigurationName) == Release del /s "$(SolutionDir)\*.zip"
 if $(ConfigurationName) == Release 7z a -tzip "$(SolutionDir)$(PlatformName)-Configs-Release.zip" "$(SolutionDir)ContentConfigs\GameData"
 if $(ConfigurationName) == Release 7z a -tzip "$(SolutionDir)$(PlatformName)-EVE-Release.zip" "$(SolutionDir)ContentEVE\GameData"
 if $(ConfigurationName) == Release 7z a -y -tzip "$(SolutionDir)$(PlatformName)-EVE.zip" "$(SolutionDir)$(PlatformName)-EVE-Release.zip" "$(SolutionDir)$(PlatformName)-Configs-Release.zip"</PostBuildEvent>
