retooling sphere shaders to use a universal mechanism

--- a/ShaderLoader/ShaderLoader.csproj
+++ b/ShaderLoader/ShaderLoader.csproj
@@ -94,6 +94,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\alphaMap.cginc" />
+    <None Include="Shaders\cubeMap.cginc" />
     <None Include="Shaders\PartIVA.shader" />
   </ItemGroup>
   <ItemGroup>
