Jool texture updates.

--- a/ContentConfigs/GameData/BoulderCo/textures.cfg
+++ b/ContentConfigs/GameData/BoulderCo/textures.cfg
@@ -3,7 +3,6 @@ EVE_TEXTURE_CONFIG
 	OBJECT
 	{
 		name=BoulderCo/Textures/cube
-		format=RGBA32
 		isCubeMap=True
 		texXn=BoulderCo/Textures/cubeXn
 		texYn=BoulderCo/Textures/cubeYn
@@ -11,5 +10,16 @@ EVE_TEXTURE_CONFIG
 		texXp=BoulderCo/Textures/cubeXp
 		texYp=BoulderCo/Textures/cubeYp
 		texZp=BoulderCo/Textures/cubeZp
+	}
+	OBJECT
+	{
+		name=BoulderCo/Textures/jool
+		isCubeMap=True
+		texXn=BoulderCo/Textures/joolXn
+		texYn=BoulderCo/Textures/joolYn
+		texZn=BoulderCo/Textures/joolZn
+		texXp=BoulderCo/Textures/joolXp
+		texYp=BoulderCo/Textures/joolYp
+		texZp=BoulderCo/Textures/joolZp
 	}
 }
