--- a/_BuildManager/_BuildManager.csproj
+++ b/_BuildManager/_BuildManager.csproj
@@ -168,8 +168,8 @@ xcopy  $(TargetName).pdb "$(SolutionDir)ContentEVE\GameData\EnvironmentalVisualE
 xcopy  $(TargetFileName).mdb "$(SolutionDir)ContentEVE\GameData\EnvironmentalVisualEnhancements\Plugins\" /eyir
 
 
-xcopy "$(SolutionDir)ContentConfigs\GameData" "C:\Users\rbray\Documents\ksp\ksp-$(ConfigurationName)\GameData" /e /y /i /r
-xcopy "$(SolutionDir)ContentEVE\GameData" "C:\Users\rbray\Documents\ksp\ksp-$(ConfigurationName)\GameData" /e /y /i /r
+xcopy "$(SolutionDir)ContentConfigs\GameData" "C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData" /eyir
+xcopy "$(SolutionDir)ContentEVE\GameData" "C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData" /eyir
 
 if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.pdb"
 if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.mdb"
