Cool depth-writing trick. Most bodies now cast shadows.

--- a/ContentConfigs/GameData/BoulderCo/shadows.cfg
+++ b/ContentConfigs/GameData/BoulderCo/shadows.cfg
@@ -3,5 +3,78 @@ EVE_SHADOWS
 	OBJECT
 	{
 		body = Kerbin
+		caster = Mun
+		caster = Minmus
+	}
+	OBJECT
+	{
+		body = Mun
+		caster = Kerbin
+		caster = Minmus
+	}
+	OBJECT
+	{
+		body = Minmus
+		caster = Kerbin
+		caster = Mun
+	}
+	OBJECT
+	{
+		body = Eve
+		caster = Gilly
+	}
+	OBJECT
+	{
+		body = Gilly
+		caster = Eve
+	}
+	OBJECT
+	{
+		body = Duna
+		caster = Ike
+	}
+	OBJECT
+	{
+		body = Ike
+		caster = Duna
+	}
+	OBJECT
+	{
+		body = Jool
+		caster = Laythe
+		caster = Bop
+		caster = Tylo
+		caster = Vall
+	}
+	OBJECT
+	{
+		body = Pol
+		caster = Jool
+	}
+	OBJECT
+	{
+		body = Bop
+		caster = Jool
+	}
+	OBJECT
+	{
+		body = Tylo
+		caster = Jool
+		caster = Laythe
+		caster = Vall
+	}
+	OBJECT
+	{
+		body = Laythe
+		caster = Jool
+		caster = Tylo
+		caster = Vall
+	}
+	OBJECT
+	{
+		body = Vall
+		caster = Jool
+		caster = Laythe
+		caster = Tylo
 	}
 }
