Cube updates, Particle "scatter"

--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -9,12 +9,10 @@ EVE_CLOUDS
 		settings
 		{
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
-			_Color = 255,255,255,255
 			_MainTex
 			{
-				value = BoulderCo/Textures/cube
-				type = AlphaCubeMap
-				alphaMask = ALPHAMAP_B
+				value = BoulderCo/Atmosphere/Textures/fair
+				type = CubeMap
 			}
 		}
 		layer2D
@@ -29,14 +27,14 @@ EVE_CLOUDS
 		}
 		layerVolume
 		{
-			maxTranslation = 0,100,0
-			size = 2000,2
-			area = 20000,4
+			maxTranslation = 100,200,100
+			size = 2000,2.2
+			area = 18000,4
+			noiseScale = 1.2,1.3,90
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 			}
@@ -75,9 +73,8 @@ EVE_CLOUDS
 			maxTranslation = 0,100,0
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 			}
@@ -117,9 +114,8 @@ EVE_CLOUDS
 			maxTranslation = 0,100,0
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 			}
@@ -166,9 +162,8 @@ EVE_CLOUDS
 			area = 24000,4
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 				_InvFade = 0.008
@@ -213,9 +208,8 @@ EVE_CLOUDS
 			area = 24000,4
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 				_InvFade = 0.008
@@ -263,9 +257,8 @@ EVE_CLOUDS
 			area = 24000,4
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 				_InvFade = 0.008
@@ -310,9 +303,8 @@ EVE_CLOUDS
 			area = 24000,4
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 				_InvFade = 0.008
@@ -360,9 +352,8 @@ EVE_CLOUDS
 			area = 24000,4
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 				_InvFade = 0.008
@@ -378,15 +369,15 @@ EVE_CLOUDS
 		detailSpeed = 0,6,0
 		settings
 		{
+			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_DetailScale = 120
+			_Color = 26,43,16,255
 			_MainTex
 			{
 				value = BoulderCo/Textures/jool
 				type = AlphaCubeMap
 				alphaMask = ALPHAMAP_R
 			}
-			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
-			_DetailScale = 120
-			_Color = 26,43,16,255
 		}
 		layer2D
 		{
@@ -401,13 +392,11 @@ EVE_CLOUDS
 			maxTranslation = 0,100,0
 			particleMaterial
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+				_Tex = BoulderCo/Atmosphere/Textures/particle/rgb
+				_BumpMap = BoulderCo/Atmosphere/Textures/particle/particle_NRM
 				_LightScatter = 0.55
 				_MinLight = 0.5
 			}
 		}
-		
 	}
 }
