--- a/ContentConfigs/GameData/BoulderCo/textures.cfg
+++ b/ContentConfigs/GameData/BoulderCo/textures.cfg
@@ -3,7 +3,7 @@ EVE_TEXTURE_CONFIG
 	OBJECT
 	{
 		name=BoulderCo/Textures/cube
-		isCubeMap=True
+		type=TEX_CUBE_6
 		texXn=BoulderCo/Textures/cubeXn
 		texYn=BoulderCo/Textures/cubeYn
 		texZn=BoulderCo/Textures/cubeZn
@@ -14,7 +14,7 @@ EVE_TEXTURE_CONFIG
 	OBJECT
 	{
 		name=BoulderCo/Textures/jool
-		isCubeMap=True
+		type=TEX_CUBE_6
 		texXn=BoulderCo/Textures/joolXn
 		texYn=BoulderCo/Textures/joolYn
 		texZn=BoulderCo/Textures/joolZn
