Small fixes and imrovements

--- a/ContentConfigs/GameData/BoulderCo/textures.cfg
+++ b/ContentConfigs/GameData/BoulderCo/textures.cfg
@@ -22,4 +22,8 @@ EVE_TEXTURE_CONFIG
 		texYp=BoulderCo/Textures/joolYp
 		texZp=BoulderCo/Textures/joolZp
 	}
+	OBJECT
+	{
+		name=BoulderCo/Atmosphere/Textures/particle/rgb
+	}
 }
