Adds UVNoise for clouds.
The new properties of the EVE_CLOUDS object items are:

_UVNoiseTex - a UV displacement texture using RG channels.
_UVNoiseScale - the size of the fractional part of the UV coord used for indexing the noise texture. Should be 1/W where W is a whole number to avoid edge stitching problems.
_UVNoiseStrength - the amount of displacement. Should generally be less than _UVNoiseScale.
_UVNoiseAnimation - offset multiplier for _Time allowing subtle animation of the noise by traversing the noise texture.

clouds.cfg is tweaked to make the most of the new options.

City Lights do not use the feature, but they could be changed to (without animation of course, and probably with a different noise texture).

The _DetailTex can generally be scaled to appear larger (smaller _DetailScale config value) as it is no longer needed for obscuring pixelization.

--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -9,6 +9,8 @@ EVE_CLOUDS
 		settings
 		{
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
+			_DetailScale = 30
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
 			_MainTex
 			{
 				value = BoulderCo/Atmosphere/Textures/fair
@@ -49,7 +51,8 @@ EVE_CLOUDS
 		settings
 		{
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
-			_DetailScale = 100
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
+			_DetailScale = 20
 			_Color = 102,102,153,255
 			_MainTex
 			{
@@ -89,7 +92,11 @@ EVE_CLOUDS
 		settings
 		{
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
-			_DetailScale = 100
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
+			_UVNoiseScale = 0.05
+			_UVNoiseStrength = 0.005
+			_UVNoiseAnimation = 0.5,0.02
+			_DetailScale = 20
 			_Color = 150,150,150,255
 			_MainTex
 			{
@@ -133,6 +140,7 @@ EVE_CLOUDS
 		{
 			_MainTex = BoulderCo/Atmosphere/Textures/eve1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
 			_DetailScale = 120
 			_DistFade = 1
 			_DistFadeVert = 4E-05
@@ -182,6 +190,7 @@ EVE_CLOUDS
 		{
 			_MainTex = BoulderCo/Atmosphere/Textures/eve1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
 			_DetailScale = 120
 			_DistFade = 1
 			_DistFadeVert = 4E-05
@@ -228,6 +237,7 @@ EVE_CLOUDS
 		{
 			_MainTex = BoulderCo/Atmosphere/Textures/eve1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
 			_DetailScale = 120
 			_DistFade = 1
 			_DistFadeVert = 4E-05
@@ -277,6 +287,7 @@ EVE_CLOUDS
 		{
 			_MainTex = BoulderCo/Atmosphere/Textures/eve1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
 			_DetailScale = 120
 			_DistFade = 1
 			_DistFadeVert = 4E-05
@@ -323,6 +334,7 @@ EVE_CLOUDS
 		{
 			_MainTex = BoulderCo/Atmosphere/Textures/eve1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
 			_DetailScale = 120
 			_DistFade = 1
 			_DistFadeVert = 4E-05
@@ -370,6 +382,10 @@ EVE_CLOUDS
 		settings
 		{
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+			_UVNoiseTex = BoulderCo/Atmosphere/Textures/uvnoise1
+			_UVNoiseScale = 0.1
+			_UVNoiseStrength = 0.007
+			_UVNoiseAnimation = 1,0.1
 			_DetailScale = 120
 			_Color = 26,43,16,255
 			_MainTex
