--- a/_BuildManager/_BuildManager.csproj
+++ b/_BuildManager/_BuildManager.csproj
@@ -158,7 +158,19 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="PostBuildMacros">
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="Targets" />
+    </GetAssemblyIdentity>
+    <ItemGroup>
+      <VersionNumber Include="@(Targets->'%(Version)')" />
+    </ItemGroup>
+  </Target>
   <PropertyGroup>
+    <PostBuildEventDependsOn>
+      $(PostBuildEventDependsOn);
+      PostBuildMacros;
+    </PostBuildEventDependsOn>
     <PostBuildEvent>xcopy  $(TargetFileName) "$(SolutionDir)ContentEVE\GameData\EnvironmentalVisualEnhancements\Plugins\" /eyir
 
 call "C:\Program Files (x86)\Mono\bin\pdb2mdb.bat" $(TargetFileName)
@@ -173,9 +185,9 @@ xcopy "$(SolutionDir)ContentEVE\GameData" "$(KSPDir)\GameData" /eyir
 if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.pdb"
 if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.mdb"
 if $(ConfigurationName) == Release del /s "$(SolutionDir)\*.zip"
-if $(ConfigurationName) == Release "C:\Program Files\7-Zip\7z" a -tzip "$(SolutionDir)$(PlatformName)-Configs-Release.zip" "$(SolutionDir)ContentConfigs\GameData"
-if $(ConfigurationName) == Release "C:\Program Files\7-Zip\7z" a -tzip "$(SolutionDir)$(PlatformName)-EVE-Release.zip" "$(SolutionDir)ContentEVE\GameData"
-if $(ConfigurationName) == Release "C:\Program Files\7-Zip\7z" a -y -tzip "$(SolutionDir)$(PlatformName)-EVE.zip" "$(SolutionDir)$(PlatformName)-EVE-Release.zip" "$(SolutionDir)$(PlatformName)-Configs-Release.zip"</PostBuildEvent>
+if $(ConfigurationName) == Release "C:\Program Files\7-Zip\7z" a -tzip "$(SolutionDir)Releases\EnvironmentalVisualEnhancements-Configs-@(VersionNumber).zip" "$(SolutionDir)ContentConfigs\GameData"
+if $(ConfigurationName) == Release "C:\Program Files\7-Zip\7z" a -tzip "$(SolutionDir)Releases\EnvironmentalVisualEnhancements-@(VersionNumber).zip" "$(SolutionDir)ContentEVE\GameData"
+</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
