--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -121,11 +121,11 @@
     </Compile>
     <Compile Include="ClassExtensions.cs" />
     <Compile Include="ConfigHelper.cs" />
+    <Compile Include="HalfSphere.cs" />
     <Compile Include="MaterialPQS.cs" />
     <Compile Include="ShaderProperties.cs" />
     <Compile Include="SimpleCube.cs" />
     <Compile Include="GUIHelper.cs" />
-    <Compile Include="HalfSphere.cs" />
     <Compile Include="HexSeg.cs" />
     <Compile Include="IsoSphere.cs" />
     <Compile Include="MaterialManager.cs" />
@@ -135,6 +135,7 @@
     <Compile Include="Tools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleIndices.cs" />
+    <Compile Include="UVSphere.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
